--- a/geometry-service/requirements.txt
+++ b/geometry-service/requirements.txt
@@ -1,16 +1,11 @@
 Flask==3.0.0
 flask-cors==4.0.0
 gunicorn==21.2.0
-numpy==1.26.4
-networkx==3.2.1
-supabase==2.4.6
-python-dotenv==1.0.1
 torch==2.0.1
 dgl==1.1.2
-pytorch-lightning==2.0.9
-PyYAML==6.0.1
-deprecate==1.0.5
-torch-geometric==2.3.0
-scikit-learn==1.3.0
+pytorch-lightning==2.1.3
+networkx==3.2.1
+numpy==1.24.3
 scipy==1.11.2
-requests==2.31.0
+scikit-learn==1.3.1
+pythonocc-core==7.7.2
