--- a/geometry-service/Dockerfile
+++ b/geometry-service/Dockerfile
@@ -3,7 +3,11 @@ FROM continuumio/miniconda3:23.10.0-1
 
 WORKDIR /app
 
-# Copy all requirements and application files
+# Install pythonocc-core FIRST from conda-forge (before pip)
+RUN conda install -y -c conda-forge python=3.10 pythonocc-core=7.7.2 numpy && \
+    conda clean --all --yes
+
+# Copy application files
 COPY requirements.txt .
 COPY app.py .
 COPY ml_inference.py .
@@ -24,19 +28,17 @@ COPY loss.py .
 COPY misc.py .
 COPY pnaconv.py .
 
-# Copy checkpoints folder (contains aagnet_model.pth)
+# Copy checkpoints
 COPY checkpoints/ ./checkpoints/
 
-# Install pythonocc-core and dependencies from conda-forge (precompiled)
-RUN conda install -y -c conda-forge pythonocc-core=7.7.2 numpy && \
-    pip install --no-cache-dir -r requirements.txt && \
-    conda clean --all --yes
+# Install Python dependencies (pythonocc already installed via conda)
+RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 5000
 
-# Add health check
+# Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD python -c "import requests; requests.get('http://localhost:5000/health')" || exit 1
 
-# Run application using gunicorn for production
+# Run with gunicorn
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--timeout", "60", "--workers", "2", "--access-logfile", "-", "--error-logfile", "-", "app:app"]
