--- a/geometry-service/requirements.txt
+++ b/geometry-service/requirements.txt
@@ -1,11 +1,13 @@
-Flask==3.0.0
+flask==2.3.2
 flask-cors==4.0.0
-gunicorn==21.2.0
-torch==2.0.1
-dgl==1.1.2
-pytorch-lightning==2.1.3
-networkx==3.2.1
-scipy==1.10.1
-scikit-learn==1.3.1
-supabase==2.0.3
-python-multipart==0.0.6
+torch==2.0.1 --index-url https://download.pytorch.org/whl/cpu
+dgl==1.1.0
+pythonocc-core==7.5.1
+scikit-learn==1.3.0
+timm==0.9.2
+numpy==1.24.3
+scipy==1.11.1
+tqdm==4.65.0
+h5py==3.9.0
+matplotlib==3.7.1
+trimesh==3.22.1
