--- a/geometry-service/requirements.txt
+++ b/geometry-service/requirements.txt
@@ -1,36 +1,14 @@
-# Vectis Machining Geometry Service - Python Dependencies
-# pythonocc-core is installed via conda in Dockerfile (not via pip)
-
-# Web Framework
-Flask==3.0.0
+flask==3.0.0
 flask-cors==4.0.0
-gunicorn==21.2.0
-
-# Deep Learning (AAGNet + UV-Net)
-torch==2.0.1
-dgl==1.1.2
-pytorch-lightning==2.1.3
-
-# Scientific Computing
+supabase==2.0.3
 numpy==1.24.3
-scipy==1.10.1
-scikit-learn==1.3.1
-networkx==3.2.1
-
-# AAGNet Additional Dependencies
+networkx==3.1
+pythonocc-core==7.5.1
+torch==2.0.1
+dgl-cu118==1.1.0
+scikit-learn==1.3.0
 timm==0.9.2
 torch-ema==0.3
 tqdm==4.65.0
 h5py==3.9.0
-
-# OCCWL Dependencies
-deprecate==1.0.5
-
-# Database
-supabase==2.0.3
-
-# File Upload
-python-multipart==0.0.6
-
-# NOTE: pythonocc-core==7.7.2 is installed via conda-forge in Dockerfile
-# Do NOT add it to this requirements.txt (it's not available on PyPI)
+requests==2.31.0
