--- a/geometry-service/requirements.txt
+++ b/geometry-service/requirements.txt
@@ -1,14 +1,13 @@
 flask==3.0.0
 flask-cors==4.0.0
 supabase==2.0.3
-numpy==1.24.3
 networkx==3.1
-pythonocc-core==7.5.1
 torch==2.0.1
-dgl-cu118==1.1.0
+dgl==1.1.0
 scikit-learn==1.3.0
 timm==0.9.2
 torch-ema==0.3
 tqdm==4.65.0
 h5py==3.9.0
 requests==2.31.0
+gunicorn==21.2.0
